# python-mobile-app

./: .dockeringore  .editorconfig  .env  .env.test  .gitignore  Dockerfile  README.md  alembic.test.ini  config.py  db_homework.txt  dependencies.py  docker-compose.test.yml  docker-compose.yml  justfile  main.py  openapi.yaml  pyproject.toml  requirements.txt  run_grpc.py
app/: __main__.py  config.py  dependencies.py  main.py  settings.py
app/api/: router.py
app/core/: logger.py
app/database/: database.py  models.py  session.py
app/grpc/: dependencies.py  logging_interceptor.py  server.py  service.py
app/grpc/proto/: schedule.proto  schedule_pb2.py
app/integrations/: schedule_repository.py  user_repository.py
app/models/: responses.py  schedules.py
app/proto/: schedule.proto  schedule_pb2_grpc.py
app/repository/: repository.py  schedule_repository.py
app/schemas/: schemas.py
app/services/: helper_service.py  schedule_service.py  user_service.py
app/transports/: router.py
app/utils/: app_settings.py
db_homework/: script_homework.sql
diagrams/: class_diagram.drawio  erd.drawio
migration/: env.py
migration/versions/: 24c2a6259e5b_initial_revision.py
migration_test/: env.py
migration_test/versions/: 4a1cee7c08c6_init.py
tests/: conftest.py  test_grpc_api.py  test_rest_api.py
tests/logs/: log.json
tests/services/: test_schedule_service.py
tests/services/logs/: log.json
