[project]
name = "app"
version = "0.0.0"
description = "An application for calculating medication schedules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.19.0",
    "annotated-types==0.6.0",
    "anyio==4.2.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "fastapi==0.109.0",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "idna==3.6",
    "pydantic==2.7.0",
    "pydantic_core==2.18.1",
    "sniffio==1.3.0",
    "SQLAlchemy==2.0.25",
    "starlette==0.35.1",
    "typing_extensions==4.12.0",
    "uvicorn==0.27.0",
    "openapi-generator-cli==7.12.0",
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "protobuf==5.29.4",
    "loguru==0.7.3",
    "pytz==2025.2",
    "grpcio-reflection==1.71.0",
    "pydantic-settings==2.9.1",
    "asyncpg==0.30.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "alembic==1.15.2",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = 3.10
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
enable_incomplete_feature = ['NewGenericSyntax']
ignore_missing_imports = true
disallow_incomplete_defs = true
strict_optional = true
exclude = [
  'generated/.+\\.py$',
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "alembic/versions/"]
lint.select = ["F", "C90", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "BLE", "B", "A", "C4", "T10", "EM", "EXE", "ICN", "G", "INP", "PIE", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"]
lint.ignore = ["ANN401", "PLR0913", "RUF001", "RUF002", "RUF003", "S101", "N818"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
order-by-type = true
split-on-trailing-comma = true
